# mri_analysis

./: .env.example  .gitignore  Dockerfile.detection  Dockerfile.pipeline  Dockerfile.reconstruction  README.md  brain_tumor_segmentation.ipynb  docker-compose.gpu.yml  docker-compose.yml  mri_reconstruction_inference_demo.ipynb  presentation.html  pyproject.toml
docs/: MRI Analysis.docx  architecture.md
mri_analysis/: __init__.py
mri_analysis/detection_service/: __init__.py  adapters.py  main.py
mri_analysis/pipeline_api/: __init__.py  clients.py  config.py  database.py  main.py  models.py  repository.py  service.py  worker.py
mri_analysis/reconstruction_service/: __init__.py  adapters.py  main.py
mri_analysis/shared/: schemas.py  storage.py
scripts/: docker_smoke_test.sh
segmentation_output/: BRATS_001_findings.json  BRATS_002_findings.json  BRATS_003_findings.json  BRATS_004_findings.json  BRATS_005_findings.json
segmentation_output/adapter_test/: findings.json
tests/: conftest.py  test_inference_contracts.py  test_pipeline_api.py
