[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-analysis"
version = "0.1.0"
description = "MRI Analysis v1 pipeline with async orchestration and stub inference services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.34,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
reconstruction = [
  "h5py>=3.10,<4",
  "monai>=1.4,<2",
  "numpy>=1.26,<2",
  "pydicom>=3,<4",
  "torch>=2.4,<3",
]
detection = [
  "monai>=1.4,<2",
  "nibabel>=5,<6",
  "numpy>=1.26,<2",
  "pydicom>=3,<4",
  "torch>=2.4,<3",
]

[tool.setuptools.packages.find]
include = ["mri_analysis*"]
